SERVER-45218 bounded libunwind backtrace